--- a/site/module5_solution.html
+++ b/site/module5_solution.html
@@ -27,7 +27,7 @@
           <div class="navbar-brand">
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
             <p>
-              <img src="Star-K_logo-864x763.jpg" alt="Kosher certification">
+              <img src="star-k-logo.png" alt="Kosher certification">
               <span>Kosher Certified</span>
             </p>
           </div>
