--- a/site/module5_solution.html
+++ b/site/module5_solution.html
@@ -20,12 +20,12 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
+          <a href="module5_solution.html" class="pull-left visible-md visible-lg">
             <div id="logo-img" alt="Logo image"></div>
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <a href="module5_solution.html"><h1>David Chu's China Bistro</h1></a>
             <p>
               <img src="star-k-logo.png" alt="Kosher certification">
               <span>Kosher Certified</span>
@@ -43,7 +43,7 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li id="navHomeButton" class="visible-xs active">
-              <a href="index.html">
+              <a href="module5_solution.html">
                 <span class="glyphicon glyphicon-home"></span> Home</a>
             </li>
             <li id="navMenuButton">
